--- a/app.yaml
+++ b/app.yaml
@@ -6,8 +6,12 @@ handlers:
 - url: /
   static_files: src/index.html
   upload: src/index.html
+  secure: always
+  redirect_http_response_code: 301
 
 - url: /(.*)
   static_files: src/\1
   upload: src/(.*)
+  secure: always
+  redirect_http_response_code: 301
 
