--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "gulp-replace": "^1.0.0",
         "gulp-sass": "4.0.2",
         "gulp-uglify": "3.0.2",
-        "merge-stream": "2.0.0"
+        "merge-stream": "2.0.0",
+        "workbox-build": "^5.1.2"
     }
 }
