--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,64 @@ handlers:
   secure: always
   redirect_http_response_code: 301
 
-- url: /(.*)
+- url: /(.*\.css)
+  mime_type: text/css
   static_files: dist/\1
-  upload: dist/(.*)
+  upload: dist/(.*\.css)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.js)
+  mime_type: text/javascript
+  static_files: dist/\1
+  upload: dist/(.*\.js)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.json)
+  mime_type: application/json
+  static_files: dist/\1
+  upload: dist/(.*\.json)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.(bmp|gif|ico|jpeg|jpg|png))
+  static_files: dist/\1
+  upload: dist/(.*\.(bmp|gif|ico|jpeg|jpg|png))
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.ttf)
+  mime_type: font/ttf
+  static_files: dist/\1
+  upload: dist/(.*\.ttf)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.eot)
+  mime_type: application/vnd.ms-fontobject
+  static_files: dist/\1
+  upload: dist/(.*\.eot)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.(svg|svgz))
+  mime_type: image/svg+xml
+  static_files: dist/\1
+  upload: dist/(.*\.(svg|svgz))
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.*\.(woff|woff2))
+  mime_type: application/font-woff
+  static_files: dist/\1
+  upload: dist/(.*\.(woff|woff2))
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.+)
+  static_files: dist/\1.html
+  upload: dist/(.+)
   secure: always
   redirect_http_response_code: 301
 
