--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "gulp-rename": "1.4.0",
         "gulp-replace": "^1.0.0",
         "gulp-sass": "4.0.2",
+        "gulp-save": "^1.3.0",
+        "gulp-sitemap": "^7.6.0",
         "gulp-uglify": "3.0.2",
         "merge-stream": "2.0.0",
         "workbox-build": "^5.1.2"
